// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`while running in a browser environment should multiple and nested render correctly 1`] = `
<div>
  <div
    draggable="true"
  >
    <div>
      <span>
        Drag Me!
      </span>
      <div
        draggable="true"
      >
        <span>
          Drag Me!
        </span>
      </div>
    </div>
  </div>
  <div
    draggable="true"
  >
    <span>
      Drag Me!
    </span>
  </div>
</div>
`;

exports[`while running in a browser environment should render correctly 1`] = `
<div>
  <div
    draggable="true"
  >
    <div>
      Drop Here
    </div>
  </div>
</div>
`;
